<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pefami.benpaob.login.RegistActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textColor="#000000"
        android:textSize="48sp"
        android:gravity="center"
        android:text="@string/regist"
        />
    <LinearLayout
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_bg"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_input_phone"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textColor="#aa000000"
                android:textSize="16sp"
                android:padding="10dp"
                android:inputType="phone"
                android:background="@null"
                android:hint="@string/input_phone"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/et_get_verify"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:text="@string/get_verify"
                android:background="@drawable/btn_blue_bg"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
        <EditText
            android:id="@+id/et_input_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/input_verify"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#aa000000"
            android:textSize="16sp"
            android:background="@drawable/edittext_bg"
            />
        <EditText
            android:id="@+id/et_input_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/input_passwd"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#aa000000"
            android:textSize="16sp"
            android:background="@drawable/edittext_bg"
            />
        <EditText
            android:id="@+id/et_input_repasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:hint="@string/input_repasswd"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#aa000000"
            android:textSize="16sp"
            android:background="@drawable/edittext_bg"
            />
       <CheckBox
           android:id="@+id/cb_agreement"
           android:text="@string/check_agreement"
           android:textColor="#000000"
           android:checked="false"
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_gray_bg"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/regist_next"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
