<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.CheckInCarActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="#000000"
        android:textSize="42sp"
        android:gravity="center"
        android:text="@string/checkin_car"
        />
    <ScrollView
        android:layout_weight="7"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="#aa000000"
                    android:text="@string/city"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_change_city"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:background="@null"
                    android:hint="@string/select_city"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="#e7e7e7"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>
            <LinearLayout
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="#aa000000"
                    android:text="@string/car_number"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/sp_province"
                    android:layout_width="65dp"
                    android:layout_height="match_parent"></Spinner>
                <EditText
                    android:id="@+id/et_input_car_number"
                    android:hint="@string/input_car_number"
                    android:background="@null"
                    android:textSize="16sp"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <View
                android:background="#e7e7e7"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>
            <LinearLayout
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="#aa000000"
                    android:text="@string/car_type"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_car_type"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:hint="@string/select_car_type"
                    android:background="@null"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="#e7e7e7"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>
            <LinearLayout
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="#aa000000"
                    android:text="@string/car_owner"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_car_owner"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:hint="@string/car_owner_hint"
                    android:background="@null"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="#e7e7e7"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>
            <LinearLayout
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="#aa000000"
                    android:text="@string/car_date"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/et_car_date"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:hint="2016-09-20"
                    android:background="@null"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:textSize="16sp"
                android:textColor="#aa000000"
                android:text="@string/car_owner_info_hint"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="#e7e7e7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="#aa000000"
                    android:text="@string/car_owner_name"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_car_owner_name"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:background="@null"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="#e7e7e7"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>
            <LinearLayout
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="#aa000000"
                    android:text="@string/car_owner_idcard"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_car_owner_idcard"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:background="@null"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="#e7e7e7"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>
            <LinearLayout
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="#aa000000"
                    android:text="@string/licence_date"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/et_licence_date"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:background="@null"
                    android:padding="10dp"
                    android:hint="2016-09-20"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="#e7e7e7"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_checkin_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_blue_bg"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/regist_next"
        android:textColor="#ffffff"
        android:textSize="16sp" />
</LinearLayout>
