<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pefami.benpaob.login.ActivateActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textColor="#000000"
        android:textSize="48sp"
        android:gravity="center"
        android:text="@string/activate"
        />
    <LinearLayout
        android:padding="20dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/tv_location_hint"
            android:textColor="#aa000000"
            android:textSize="16sp"
            android:text="请输入激活码"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_activate_code"
            android:padding="5dp"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:hint="激活码"
            android:maxLines="1"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:padding="20dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <CheckBox
            android:id="@+id/cb_agreement"
            android:text="@string/check_agreement"
            android:textColor="#000000"
            android:checked="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_gray_bg"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/regist_next"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
